# parking

./: .gitignore  DESIGN-CLAUDE.md  DESIGN-GPT.md  DESIGN.md  INTEGRATION.md  Makefile  PLAN.md  package-lock.json  package.json  playwright.config.ts
engine/: Cargo.toml
engine/src/: aisle_graph.rs  aisle_polygon.rs  annotations.rs  clip.rs  edge_tag_index.rs  face.rs  generate.rs  inset.rs  island.rs  lib.rs  regions.rs  resolve.rs  segment.rs  skeleton.rs  types.rs  wasm.rs
engine/src/debug/: mod.rs
engine/src/geom/: arc.rs  bezier.rs  boolean.rs  clip.rs  inset.rs  mod.rs  offset.rs  poly.rs
engine/src/graph/: aisle.rs  mod.rs  regions.rs
engine/src/pipeline/: bays.rs  corridors.rs  filter.rs  generate.rs  integration_tests.rs  islands.rs  mod.rs  placement.rs  spines.rs  tagging.rs
engine/src/types/: addressing.rs  geom.rs  graph.rs  io.rs  mod.rs  output.rs
engine/tests/: runner.rs
engine/tests/harness/: directives.rs  mod.rs  parser.rs  rewriter.rs  svg.rs
engine/tests/testdata/: angled-stalls.txt  annotation-chain-vs-segment.txt  annotation-direction-quartet.txt  annotation-multi-region-chain.txt  annotation-perimeter-direction.txt  basic-rectangle.txt  corner-islands.txt  cross-aisle-spacing.txt  curved-boundary.txt  default-app-layout.txt  drive-line-intersection.txt  drive-line-long.txt  graph-cross-aisle.txt  half-hull.txt  hole-boundary-face.txt  hole-building.txt  hole-stalls.txt  manual-aisle-graph.txt  offset-carriers-arc-wedges.txt  offset-carriers-arc.txt  offset-carriers-basic-rect.txt  offset-carriers-interior-arc-wedges.txt  (+16 more)
(+83 files in other folders)
