[package]
name = "parking-lot-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pinned to 4.0.7 — newer 4.x patch versions added a debug_assert in
# the outline builder that panics on certain arc-discretized inputs.
i_overlay = "=4.0.7"
ts-rs = { version = "12.0.1", features = ["serde-compat"] }
serde-wasm-bindgen = "0.6.5"
polylabel = "3.2.0"
geo-types = "0.7.19"

[dev-dependencies]
datadriven = { version = "0.9", default-features = false }

[profile.release]
opt-level = "s"
lto = true
